--- a/instructions.html
+++ b/instructions.html
@@ -10,10 +10,10 @@
 <body>
 
     <div class="navbar">
-    <a href="https://rosalindhook.github.io/YourSpace_treasurehunt/">Home</a>
-    <a href="https://rosalindhook.github.io/YourSpace_treasurehunt/instructions/">Instructions</a>
-    <a href="https://rosalindhook.github.io/YourSpace_treasurehunt/information/">Tree information</a>
-    <a href="https://rosalindhook.github.io/YourSpace_treasurehunt/about/">About Seears Park</a>
+    <a href="index.html">Home</a>
+    <a href="instructions.html">Instructions</a>
+    <a href="information.html">Tree information</a>
+    <a href="about.html">About Seears Park</a>
   </div>
   
   <!-- Instructions content -->
