--- a/index.html
+++ b/index.html
@@ -15,10 +15,11 @@
   <!-- Navbar -->
 <body>
   <div class="navbar">
-    <a href="https://rosalindhook.github.io/YourSpace_treasurehunt/">Home</a>
-    <a href="https://rosalindhook.github.io/YourSpace_treasurehunt/instructions/">Instructions</a>
-    <a href="https://rosalindhook.github.io/YourSpace_treasurehunt/information/">Tree information</a>
-    <a href="https://rosalindhook.github.io/YourSpace_treasurehunt/about/">About Seears Park</a>
+    <a href="index.html" target="_blank" >Home</a>
+    <a href="instructions.html" target="_blank" >Instructions</a>
+    <a href="information.html" target="_blank" >Tree information</a>
+    <a href="about.html" target="_blank" >About Seears Park</a>
+  </div>
     <span id="score">Score: 0</span>
   </div>
 
