--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@
     <h2>The Seears Park Tree-sure Trail</h2>
     <p>Here are the steps to follow for the tree-sure trail:</p>
     <ol>
-      <li>Step 1: Use the map below to navigate through the park using your phone. Make sure that you have geolocation turned on for this to work effectively.</li>
-      <li>Step 2: When you get close to one of the flower, leaf, or tree symbols on the map, you will see some information about what you can find in that area (you may still need to move around a little to look for it).</li>
-      <li>Step 3: The symbol will disappear from your map, and you will collect a point.</li>
-      <li>Step 4: Keep track of your score at the top right corner.</li>
-      <li>Step 5: The trail ends when all the symbols have disappeared from your map. Enjoy!</li>
+      <li>Use the map below to navigate through the park using your phone. Make sure that you have geolocation turned on for this to work effectively.</li>
+      <li>When you get close to one of the flower, leaf, or tree symbols on the map, you will see some information about what you can find in that area (you may still need to move around a little to look for it).</li>
+      <li>The symbol will disappear from your map, and you will collect a point.</li>
+      <li>Keep track of your score at the top right corner.</li>
+      <li>The trail ends when all the symbols have disappeared from your map. Enjoy!</li>
       <li>NOTE: If you prefer to take a walk without scoring points or using geolocation, you can look at all the photos in 'Tree information' above and see if you can find these features in Seears Park.</li>
     </ol>
   </div>
