--- a/information.html
+++ b/information.html
@@ -3,16 +3,15 @@
   <head>
   <meta charset="UTF-8">
   <title>Seears Park Tree-sure Trail</title>
-  <link rel="stylesheet" href="styles.css">bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+    <link href="curate.css" rel="stylesheet"/>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
 
 </head>
   <body>
-
     <div class="view" style="background-image: url('seears_park.jpg'); background-repeat: no-repeat; background-size: cover; background-position: center center;">
     <div class = "container-fluid">
     <div class="navbar">
-    <a href="index.html" target="_blank" >Home</a>
-    <a href="instructions.html" target="_blank" >Instructions</a>
+    <a href="index.html" target="_blank" >Tree-Sure Trail</a>
     <a href="information.html" target="_blank" >Tree information</a>
     <a href="about.html" target="_blank" >About Seears Park</a>
     </div>
@@ -20,9 +19,9 @@
         <!--Grid row-->
         <div class="row d-flex justify-content-center">
             <div class="col-md-12 mb-4 white-text text-center wow fadeIn">
-                <h1 class="display-3 font-weight-bold white-text mb-0 pt-md-5 pt-5>curate.com">cu·rate</h1>
+                <h1 class="display-3 font-weight-bold white-text mb-0 pt-md-5 pt-5>curate.com">Seears Park</h1>
                 <hr class="hr-light my-4 w-100 mx-auto;">
-                <h2 class="subtext-header mt-2 mb-4">home of pretty useful things</h2>
+                <h2 class="subtext-header mt-2 mb-4">all about the trees</h2>
             </div>
         </div>
         <!--Grid row-->
@@ -40,7 +39,7 @@
                         </div>
                     </div>
                         <div class="card-body">
-                      <p class="card-text">blah blah blah</p>
+                      <p class="card-text">There are four Atlas Cedar trees in Seears Park - can you find them all? These spiky trees are located near the corners of the park. Look for the silvery blue spiky leaves. This tree originally came from North Africa.</p>
                       <a href="https://www.woodlandtrust.org.uk/trees-woods-and-wildlife/british-trees/a-z-of-british-trees/cedar/">Woodland Trust page</a>
                     </div>
                   </div>
