--- a/information.html
+++ b/information.html
@@ -35,12 +35,12 @@
                     <div class="container">
                     <img src="atlas_cedar2.jpg" class="image rounded-circle" alt="Atlas Cedar"; width="230"; height="160";>
                     <div class="overlay">
-                         <div class="text">Atlas Cedar</div>
+                         <div class="text">Spiky yet stylish</div>
                         </div>
                     </div>
-                        <div class="card-body">
+                      <div class="card-body">
                       <p class="card-text">There are four Atlas Cedar trees in Seears Park - can you find them all? These spiky trees are located near the corners of the park. Look for the silvery blue spiky leaves. This tree originally came from North Africa.</p>
-                      <a href="https://www.woodlandtrust.org.uk/trees-woods-and-wildlife/british-trees/a-z-of-british-trees/cedar/">Woodland Trust page</a>
+                      <a href="https://www.woodlandtrust.org.uk/trees-woods-and-wildlife/british-trees/a-z-of-british-trees/cedar/">Learn more</a>
                     </div>
                   </div>
                 </div>
@@ -51,14 +51,14 @@
                 <div class="mx-auto" style="width: 250px;">
                 <div class="card h-100" style="width: 18rem;">
                     <div class="container">
-                    <img src="https://res.cloudinary.com/patch-gardens/image/upload/c_fill,f_auto,h_840,q_auto:good,w_840/v1578481540/wskwakb44iw6eotrj0tp.jpg" class="image rounded-circle"; alt="Swiss cheese plant"; width="230"; height="160";>
+                    <img src="black_locust.jpg" class="image rounded-circle"; alt="Black Locust Tree"; width="230"; height="160";>
                     <div class="overlay">
-                        <div class="text">pretty and purifying</div>
+                        <div class="text">Bees love me</div>
                     </div>
                     </div>
                         <div class="card-body">
-                      <p class="card-text">Chaz the Swiss cheese plant, also known as a Monstera Delicios or Custard Plant</p>
-                      <a href="https://www.patchplants.com/gb/en/plants/swiss-cheese-plant-54/" class="btn btn-outline-light mb-4">£16</a>
+                      <p class="card-text">This is the Black Locust or False Acacia tree, which is native to eastern North America but is widely planted in Europe. Bees love it when it blossoms, and acacia honey comes from bees feeding on this tree. The leaves are in pairs directly opposite each other.</p>
+                      <a href="https://www.gardenersworld.com/plants/robinia-pseudoacacia/" class="btn btn-outline-light mb-4">Learn more</a>
                     </div>
                 </div>
                 </div>
@@ -69,14 +69,14 @@
                 <div class="mx-auto" style="width: 250px;">
                     <div class="card h-100" style="width: 18rem;">
                         <div class="container">
-                        <img src="coaster.png" class="image rounded-circle" alt="marble drinks coaster with letter 'R'" width="230"; height="160";>
+                        <img src="blackberry.jpg" class="image rounded-circle" alt="blackberry bush" width="230"; height="160";>
                         <div class="overlay">
-                            <div class="text">ooh pick me, pick me!</div>
+                            <div class="text">Juicy and sweet!</div>
                         </div>
                         </div>
                             <div class="card-body">
-                        <p class="card-text">Alphabet initial gold and white marble drinks coaster, from Oliver Bonas - letter 'R'</p>
-                        <a href="https://www.oliverbonas.com/homeware/alphabet-initial-gold-white-marble-coasters-312262" class="btn btn-outline-light mb-4">£9.50</a>
+                        <p class="card-text">This is a blackberry bush - there aren’t any sweet blackberries yet (though a few green fruit are starting to appear), but look out for the white and pale pink flowers and spiky branches.</p>
+                        <a href="https://www.rhs.org.uk/fruit/blackberries-and-hybrid-berries/grow-your-own" class="btn btn-outline-light mb-4">Learn more</a>
                         </div>
                     </div>
                 </div>
@@ -90,14 +90,14 @@
                 <div class="mx-auto" style="width: 250px;">
                 <div class="card" style="width: 18rem;">
                     <div class="container">
-                    <img src="https://cdn.waterstones.com/images/00254508-400x400.jpeg" class="image rounded-circle"; alt="Waterstones book of the month"; width="230"; height="160";>
+                    <img src="cherry.jpg" class="image rounded-circle"; alt="Cherry plum"; width="230"; height="160";>
                         <div class="overlay">
-                            <div class="text">hunker down with a good read</div>
+                            <div class="text">Grandma to the domestic plum</div>
                             </div>
                         </div>
                     <div class="card-body">
-                      <p class="card-text">Cleopatra and Frankenstein by Coco Mellors, Waterstones book of the month Feb 2023</p>
-                      <a href="https://www.waterstones.com/book/cleopatra-and-frankenstein/coco-mellors/9780008421793" class="btn btn-outline-light mb-4">£8.49</a>
+                      <p class="card-text">Cherry plum - this is a street tree, an early spring flowerer and the ancestor of the domestic plum tree. Look out for purple and red leaves.</p>
+                      <a href="https://www.woodlandtrust.org.uk/trees-woods-and-wildlife/british-trees/a-z-of-british-trees/cherry-plum/" class="btn btn-outline-light mb-4">Learn more</a>
                     </div>
                   </div>
                 </div>
@@ -108,14 +108,14 @@
                 <div class="mx-auto" style="width: 250px">
                 <div class="card" style="width: 18rem;">
                     <div class="container">
-                    <img src="https://onlineshop.oxfam.org.uk/ccstore/v1/images/?source=/file/v3977799043591472807/products/HN505288.2.jpg&height=300&width=300" class="image rounded-circle"; alt="Oxfam chocolate heart"; width="230"; height="160";>
+                    <img src="citronella.jpg" class="image rounded-circle"; alt="Citronella Engleriana"; width="230"; height="160";>
                     <div class="overlay">
-                        <div class="text">keep your strength up</div>
+                        <div class="text">Mystery tree!</div>
                         </div>
                         </div>
                         <div class="card-body">
-                      <p class="card-text">Oxfam Belgian Milk Chocolate Heart - 75g - delicious and charitable</p>
-                      <a href="https://onlineshop.oxfam.org.uk/oxfam-belgian-milk-chocolate-heart-75g/product/HN505288?sku=HN505288" class="btn btn-outline-light mb-4">£4.99</a>
+                      <p class="card-text">This seems to be a Citronella Engleriana - which originally came from Rio de Janeiro in Brazil. How did it end up in Seears Park?! Look for smooth mid green waxy leaves and the little green ‘fruits’ (don’t eat!).</p>
+                      <a href="https://en.wikipedia.org/wiki/Citronella_(genus)" class="btn btn-outline-light mb-4">Learn more</a>
                     </div>
                     </div>
                 </div>
@@ -126,14 +126,14 @@
                 <div class="mx-auto" style="width: 250px;">
                     <div class="card" style="width: 18rem;">
                         <div class="container">
-                        <img src="https://www.hobbs.com/dw/image/v2/BDCH_PRD/on/demandware.static/-/Sites-hobbs-catalog/default/dwc88dae72/images/0221-8079-1185L00/0221-8079-1185L00-PIPPA-WIDE-TROUSER-BLACK_01.jpg?sw=1280&sh=1792&strip=false" class="image rounded-circle" alt="Workwear wide leg trousers" width="230"; height="160";>
+                        <img src="dogwood.jpg" class="image rounded-circle" alt="Dogwood" width="230"; height="160";>
                             <div class="overlay">
-                                <div class="text">you want me</div>
+                                <div class="text">Nothing common about me!</div>
                             </div>
                         </div>
                         <div class="card-body">
-                        <p class="card-text">Hobbs workwear jersey wide leg trousers, derived from renewable wood sources</p>
-                        <a href="https://www.hobbs.com/product/pippa-jersey-wide-leg-trousers/0221-8079-1185L00-BLACK.html#cgid=clothing-trousers-wide-leg&is=true&sz=60&start=0&isSecondPage=false&pid=0221-8079-1185L00-BLACK&pos=9" class="btn btn-outline-light mb-4">£89</a>
+                        <p class="card-text">This is Common Dogwood - a small broadleaf shrub, typically found growing along woodland edges and in hedgerows of southern England. It has black berries which used to be used for primitive inks and lamp oil.</p>
+                        <a href="https://www.woodlandtrust.org.uk/trees-woods-and-wildlife/british-trees/a-z-of-british-trees/dogwood/" class="btn btn-outline-light mb-4">Learn more</a>
                         </div>
                     </div>
                 </div>
