--- a/information.html
+++ b/information.html
@@ -164,7 +164,7 @@
                 <div class="mx-auto" style="width: 250px;">
                     <div class="card" style="width: 18rem;">
                         <div class="container">
-                        <img src="field_maple.png" class="image rounded-circle" alt="Field Maple tree" width="230"; height="160";>
+                        <img src="field_maple.jpg" class="image rounded-circle" alt="Field Maple tree" width="230"; height="160";>
                             <div class="overlay">
                         <div class="text">anyone for pancakes?</div>
                         </div>
@@ -202,14 +202,14 @@
                 <div class="mx-auto" style="width: 250px;">
                 <div class="card" style="width: 18rem;">
                     <div class="container">
-                    <img src="elder.jpg" class="image rounded-circle" alt="Elder" width="230"; height="160";>
+                    <img src="holly.jpg" class="image rounded-circle" alt="Holly" width="230"; height="160";>
                         <div class="overlay">
-                        <div class="text">Midsummer magic</div>
+                        <div class="text">Midwinter magic</div>
                         </div>
                         </div>
                         <div class="card-body">
-                      <p class="card-text">Elder - look for the white frothy elderflower, which can be used in cooking to make sweet drinks and cakes. The Elder tree is linked to Fairy and Goddess mythology, with people believing the best time to encounter fairies was under an elder tree on Midsummer’s Eve. It used to be considered lucky if it grew near your house.</p>
-                      <a href="https://www.woodlandtrust.org.uk/trees-woods-and-wildlife/british-trees/a-z-of-british-trees/elder/" class="btn btn-outline-light mb-4">Learn more</a>
+                      <p class="card-text">This is Holly - a type of bush with recognisable leaves. The leaves have sharp edges, and are often used to decorate a house on Christmas Day. Some types of holly are used to make tea. The leaves of the Holly don't fall off in the winter because they're very thick and have a waxy layer on them.</p>
+                      <a href="https://www.woodlandtrust.org.uk/trees-woods-and-wildlife/british-trees/a-z-of-british-trees/holly/" class="btn btn-outline-light mb-4">Learn more</a>
                     </div>
                   </div>
                 </div>
@@ -219,14 +219,14 @@
                 <div class="mx-auto" style="width: 250px;">
                     <div class="card" style="width: 18rem;">
                         <div class="container">
-                        <img src="field_maple.png" class="image rounded-circle" alt="Field Maple tree" width="230"; height="160";>
+                        <img src="conker.jpg" class="image rounded-circle" alt="conker" width="230"; height="160";>
                             <div class="overlay">
-                        <div class="text">anyone for pancakes?</div>
+                        <div class="text">conker fight</div>
                         </div>
                         </div>
                             <div class="card-body">
-                          <p class="card-text">This is a Field Maple - a broadleaf deciduous tree which is native to the UK and most of Europe. The sap can be used to make maple syrup - yum! The leaves are small, dark green and shiny, with five lobes and rounded teeth</p>
-                          <a href="https://www.woodlandtrust.org.uk/trees-woods-and-wildlife/british-trees/a-z-of-british-trees/field-maple/" class="btn btn-outline-light mb-4">Learn more</a>
+                          <p class="card-text">This looks like a young conker, which means this is a Horse Chestnut Tree. The conker sits inside a spiky green shell, before falling to the ground in autumn. Its signature reddish-brown conkers appear in autumn.</p>
+                          <a href="https://www.woodlandtrust.org.uk/trees-woods-and-wildlife/british-trees/a-z-of-british-trees/horse-chestnut/" class="btn btn-outline-light mb-4">Learn more</a>
                         </div>
                       </div>
                     </div>
@@ -236,14 +236,14 @@
                 <div class="mx-auto" style="width: 250px;">
                     <div class="card" style="width: 18rem;">
                         <div class="container">
-                        <img src="ginkgo.jpg" class="image rounded-circle" alt="Ginkgo biloba tree" width="230"; height="160";>
+                        <img src="leyland.jpg" class="image rounded-circle" alt="leyland cypress" width="230"; height="160";>
                             <div class="overlay">
-                            <div class="text">Dinosaur tree!</div>
+                            <div class="text">fights with the neighbours</div>
                             </div>
                         </div>
                         <div class="card-body">
-                        <p class="card-text">This is Ginkgo Biloba otherwise known as the Maidenhair Tree, the tree that outlived the dinosaurs as it comes from prehistoric times. This tree has a long life - the oldest one is thought to be 3500+ years old! Look for the fan-shaped leaves. There are two of these on the same side of the park - one big and one small. The smaller one (with the bunting) was planted in May 2023 by volunteers to celebrate King Charles’ coronation.</p>
-                        <a href="https://en.wikipedia.org/wiki/Ginkgo_biloba" class="btn btn-outline-light mb-4">Learn more</a>
+                        <p class="card-text">Leyland cypress - this is a fast growing tree that reaches enormous heights quickly. Its leaves are scale-like, soft and overlapping, and their flowers are purple/blue buds. Some animals use these trees for shelter, especially in urban areas where cover can be sparse.</p>
+                        <a href="https://www.woodlandtrust.org.uk/trees-woods-and-wildlife/british-trees/a-z-of-british-trees/leyland-cypress/" class="btn btn-outline-light mb-4">Learn more</a>
                         </div>
                     </div>
                 </div>
