--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       <li>The symbol will disappear from your map, and you will collect a point.</li>
       <li>Keep track of your score at the top right corner.</li>
       <li>The trail ends when all the symbols have disappeared from your map. Enjoy!</li>
-      <li>NOTE: If you prefer to take a walk without scoring points or using geolocation, you can look at all the photos in 'Tree information' above and see if you can find these features in Seears Park.</li>
+      <li>NOTE: If you prefer to take a walk without scoring points or using geolocation, you can look at 'Tree information' in the navigation bar and look for the pictures of trees instead.</li>
     </ol>
   </div>
 
