--- a/information.html
+++ b/information.html
@@ -39,7 +39,7 @@
                         </div>
                     </div>
                       <div class="card-body">
-                      <p class="card-text">There are four Atlas Cedar trees in Seears Park - can you find them all? These spiky trees are located near the corners of the park. Look for the silvery blue spiky leaves. This tree originally came from North Africa.</p>
+                      <p class="card-text">Atlas Cedar - there are at least four of these in Seears Park - can you find them all? These spiky trees are located near the corners of the park. Look for the silvery blue spiky leaves. This tree originally came from North Africa.</p>
                       <a href="https://www.woodlandtrust.org.uk/trees-woods-and-wildlife/british-trees/a-z-of-british-trees/cedar/" class="btn btn-outline-light mb-4">Learn more</a>
                     </div>
                   </div>
@@ -57,7 +57,7 @@
                     </div>
                     </div>
                         <div class="card-body">
-                      <p class="card-text">This is the Black Locust or False Acacia tree, which is native to eastern North America but is widely planted in Europe. Bees love it when it blossoms, and acacia honey comes from bees feeding on this tree. The leaves are in pairs directly opposite each other.</p>
+                      <p class="card-text">Black Locust or False Acacia tree - this is native to eastern North America but is widely planted in Europe. Bees love it when it blossoms, and acacia honey comes from bees feeding on this tree. The leaves are in pairs directly opposite each other.</p>
                       <a href="https://www.gardenersworld.com/plants/robinia-pseudoacacia/" class="btn btn-outline-light mb-4">Learn more</a>
                     </div>
                 </div>
@@ -75,7 +75,7 @@
                         </div>
                         </div>
                             <div class="card-body">
-                        <p class="card-text">This is a blackberry bush - there aren’t any sweet blackberries yet (though a few green fruit are starting to appear), but look out for the white and pale pink flowers and spiky branches.</p>
+                        <p class="card-text">Blackberry bush - there aren’t any sweet blackberries yet (though a few green fruit are starting to appear), but look out for the white and pale pink flowers and spiky branches.</p>
                         <a href="https://www.rhs.org.uk/fruit/blackberries-and-hybrid-berries/grow-your-own" class="btn btn-outline-light mb-4">Learn more</a>
                         </div>
                     </div>
@@ -96,7 +96,7 @@
                             </div>
                         </div>
                     <div class="card-body">
-                      <p class="card-text">Cherry plum - this is a street tree, an early spring flowerer and the ancestor of the domestic plum tree. Look out for purple and red leaves.</p>
+                      <p class="card-text">Cherry Plum - this is a street tree, an early spring flowerer and the ancestor of the domestic plum tree. Look out for purple and red leaves.</p>
                       <a href="https://www.woodlandtrust.org.uk/trees-woods-and-wildlife/british-trees/a-z-of-british-trees/cherry-plum/" class="btn btn-outline-light mb-4">Learn more</a>
                     </div>
                   </div>
@@ -114,7 +114,7 @@
                         </div>
                         </div>
                         <div class="card-body">
-                      <p class="card-text">This seems to be a Citronella Engleriana - which originally came from Rio de Janeiro in Brazil. How did it end up in Seears Park?! Look for smooth mid green waxy leaves and the little green ‘fruits’ (don’t eat!).</p>
+                      <p class="card-text">Citronella Engleriana - at least I think so! If so it originally came from Rio de Janeiro in Brazil. How did it end up in Seears Park?! Look for smooth mid green waxy leaves and the little green ‘fruits’ (don’t eat!).</p>
                       <a href="https://en.wikipedia.org/wiki/Citronella_(genus)" class="btn btn-outline-light mb-4">Learn more</a>
                     </div>
                     </div>
@@ -132,7 +132,7 @@
                             </div>
                         </div>
                         <div class="card-body">
-                        <p class="card-text">This is Common Dogwood - a small broadleaf shrub, typically found growing along woodland edges and in hedgerows of southern England. It has black berries which used to be used for primitive inks and lamp oil.</p>
+                        <p class="card-text">Common Dogwood - a small broadleaf shrub, typically found growing along woodland edges and in hedgerows of southern England. It has black berries which used to be used for primitive inks and lamp oil.</p>
                         <a href="https://www.woodlandtrust.org.uk/trees-woods-and-wildlife/british-trees/a-z-of-british-trees/dogwood/" class="btn btn-outline-light mb-4">Learn more</a>
                         </div>
                     </div>
@@ -170,7 +170,7 @@
                         </div>
                         </div>
                             <div class="card-body">
-                          <p class="card-text">This is a Field Maple - a broadleaf deciduous tree which is native to the UK and most of Europe. The sap can be used to make maple syrup - yum! The leaves are small, dark green and shiny, with five lobes and rounded teeth</p>
+                          <p class="card-text">Field Maple - a broadleaf deciduous tree which is native to the UK and most of Europe. The sap can be used to make maple syrup - yum! The leaves are small, dark green and shiny, with five lobes and rounded teeth</p>
                           <a href="https://www.woodlandtrust.org.uk/trees-woods-and-wildlife/british-trees/a-z-of-british-trees/field-maple/" class="btn btn-outline-light mb-4">Learn more</a>
                         </div>
                       </div>
@@ -187,7 +187,7 @@
                             </div>
                         </div>
                         <div class="card-body">
-                        <p class="card-text">This is Ginkgo Biloba otherwise known as the Maidenhair Tree, the tree that outlived the dinosaurs as it comes from prehistoric times. This tree has a long life - the oldest one is thought to be 3500+ years old! Look for the fan-shaped leaves. There are two of these on the same side of the park - one big and one small. The smaller one (with the bunting) was planted in May 2023 by volunteers to celebrate King Charles’ coronation.</p>
+                        <p class="card-text">Ginkgo Biloba or the Maidenhair Tree, the tree that outlived the dinosaurs as it comes from prehistoric times. This tree has a long life - the oldest one is thought to be 3500+ years old! Look for the fan-shaped leaves. There are two of these on the same side of the park - one big and one small. The smaller one (with the bunting) was planted in May 2023 by volunteers to celebrate King Charles’ coronation.</p>
                         <a href="https://en.wikipedia.org/wiki/Ginkgo_biloba" class="btn btn-outline-light mb-4">Learn more</a>
                         </div>
                     </div>
@@ -208,7 +208,7 @@
                         </div>
                         </div>
                         <div class="card-body">
-                      <p class="card-text">This is Holly - a type of bush with recognisable leaves. The leaves have sharp edges, and are often used to decorate a house on Christmas Day. Some types of holly are used to make tea. The leaves of the Holly don't fall off in the winter because they're very thick and have a waxy layer on them.</p>
+                      <p class="card-text">Holly - a type of bush with recognisable leaves. The leaves have sharp edges, and are often used to decorate a house on Christmas Day. Some types of holly are used to make tea. The leaves of the Holly don't fall off in the winter because they're very thick and have a waxy layer on them.</p>
                       <a href="https://www.woodlandtrust.org.uk/trees-woods-and-wildlife/british-trees/a-z-of-british-trees/holly/" class="btn btn-outline-light mb-4">Learn more</a>
                     </div>
                   </div>
@@ -225,7 +225,7 @@
                         </div>
                         </div>
                             <div class="card-body">
-                          <p class="card-text">This looks like a young conker, which means this is a Horse Chestnut Tree. The conker sits inside a spiky green shell, before falling to the ground in autumn. Its signature reddish-brown conkers appear in autumn.</p>
+                          <p class="card-text">Horse Chestnut tree - this looks like a young conker. The conker sits inside a spiky green shell, before falling to the ground in autumn. Its signature reddish-brown conkers appear in autumn.</p>
                           <a href="https://www.woodlandtrust.org.uk/trees-woods-and-wildlife/british-trees/a-z-of-british-trees/horse-chestnut/" class="btn btn-outline-light mb-4">Learn more</a>
                         </div>
                       </div>
@@ -242,7 +242,7 @@
                             </div>
                         </div>
                         <div class="card-body">
-                        <p class="card-text">Leyland cypress - this is a fast growing tree that reaches enormous heights quickly. Its leaves are scale-like, soft and overlapping, and their flowers are purple/blue buds. Some animals use these trees for shelter, especially in urban areas where cover can be sparse.</p>
+                        <p class="card-text">Leyland Cypress - this is a fast growing tree that reaches enormous heights quickly. Its leaves are scale-like, soft and overlapping, and their flowers are purple/blue buds. Some animals use these trees for shelter, especially in urban areas where cover can be sparse.</p>
                         <a href="https://www.woodlandtrust.org.uk/trees-woods-and-wildlife/british-trees/a-z-of-british-trees/leyland-cypress/" class="btn btn-outline-light mb-4">Learn more</a>
                         </div>
                     </div>
@@ -262,7 +262,7 @@
                         </div>
                         </div>
                         <div class="card-body">
-                      <p class="card-text">TSmall Leaved Lime - a pollinator magnet! The small-leaved lime’s blossom produces a sweet scent and pleasantly minty honey, and its leaves support the caterpillars of moths such as the lime hawk, peppered and vapourer. Flowers are green-yellow, have five petals, and hang in clusters of 4–10.</p>
+                      <p class="card-text">Small Leaved Lime - a pollinator magnet! The small-leaved lime’s blossom produces a sweet scent and pleasantly minty honey, and its leaves support the caterpillars of moths such as the lime hawk, peppered and vapourer. Flowers are green-yellow, have five petals, and hang in clusters of 4–10.</p>
                       <a href="https://www.woodlandtrust.org.uk/trees-woods-and-wildlife/british-trees/a-z-of-british-trees/small-leaved-lime/" class="btn btn-outline-light mb-4">Learn more</a>
                     </div>
                   </div>
