--- a/index.html
+++ b/index.html
@@ -23,18 +23,16 @@
 
   <!-- Instructions content -->
   <div class="content">
-    <h2>The Seears Park Tree-sure Trail</h2>
-    <p>Here are the steps to follow for the tree-sure trail:</p>
+    <p>To follow the Seears Park Tree-sure Trail, this is what you need to do:</p>
     <ol>
-      <li>Use the map below to navigate through the park using your phone. Make sure that you have geolocation turned on for this to work effectively.</li>
-      <li>When you get close to one of the flower, leaf, or tree symbols on the map, you will see some information about what you can find in that area (you may still need to move around a little to look for it).</li>
+      <li>Use the map below to navigate your way around the park. Make sure that you have geolocation turned on for this to work effectively.</li>
+      <li>When you get close to one of the flower, leaf, or tree symbols on the map, some information will pop up about what you have found at that point.</li>
       <li>The symbol will disappear from your map, and you will collect a point.</li>
       <li>Keep track of your score at the top right corner.</li>
-      <li>The trail ends when all the symbols have disappeared from your map. Enjoy!</li>
-      <li>NOTE: If you prefer to take a walk without scoring points or using geolocation, you can look at 'Tree information' in the navigation bar and look for the pictures of trees instead.</li>
+      <li>You will have finished the trail when all the symbols disappear from your map (i.e. you found everything). Enjoy!</li>
+      <li>NOTE: If you prefer to go for a walk without scoring points or using this map, you can click on 'Tree information' at the top of this page to find out more about the trees of Seears Park.</li>
     </ol>
   </div>
-
   
 <!-- Main map -->
 <div id="tree_map"></div>
